--- a/www/hub.css
+++ b/www/hub.css
@@ -480,6 +480,10 @@ svg.field-item-icon {
   fill: #222;
 }
 
+svg.clickable {
+  cursor: pointer;
+}
+
 @media (prefers-color-scheme: dark) {
   svg.field-item-icon {
     fill: #eee;
